--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -80,22 +80,22 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>$(SolutionDir)3rdParty\imgui-1.89.3;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)3rdParty/RapidXML;$(SolutionDir)3rdParty\imgui-1.89.3;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)3rdParty\imgui-1.89.3;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)3rdParty/RapidXML;$(SolutionDir)3rdParty\imgui-1.89.3;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>$(SolutionDir)3rdParty\imgui-1.89.3;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)3rdParty/RapidXML;$(SolutionDir)3rdParty\imgui-1.89.3;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <IncludePath>$(SolutionDir)3rdParty\imgui-1.89.3;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)3rdParty/RapidXML;$(SolutionDir)3rdParty\imgui-1.89.3;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
