--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="Resource Files\Components\Exercise">
       <UniqueIdentifier>{a9d7a335-afaf-4fa4-a395-72ae97108d8d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Singletons\Services">
+      <UniqueIdentifier>{d707d6ba-9042-4a28-b3e4-6d97ce780bc4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Minigin.h">
@@ -73,9 +76,6 @@
       <Filter>Resource Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Singleton.h">
-      <Filter>Source Files\Singletons</Filter>
-    </ClInclude>
-    <ClInclude Include="ResourceManager.h">
       <Filter>Source Files\Singletons</Filter>
     </ClInclude>
     <ClInclude Include="..\3rdParty\imgui-1.89.3\imconfig.h">
@@ -153,20 +153,8 @@
     <ClInclude Include="TimeM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CollisionManager.h">
-      <Filter>Source Files\Singletons</Filter>
-    </ClInclude>
-    <ClInclude Include="InputManager.h">
-      <Filter>Source Files\Singletons</Filter>
-    </ClInclude>
     <ClInclude Include="BoxCollider.h">
       <Filter>Resource Files\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="Renderer.h">
-      <Filter>Source Files\Singletons</Filter>
-    </ClInclude>
-    <ClInclude Include="LevelLoader.h">
-      <Filter>Source Files\Singletons</Filter>
     </ClInclude>
     <ClInclude Include="Level.h">
       <Filter>Source Files</Filter>
@@ -178,7 +166,22 @@
       <Filter>Source Files\Singletons</Filter>
     </ClInclude>
     <ClInclude Include="AudioService.h">
-      <Filter>Source Files\Singletons</Filter>
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClInclude>
+    <ClInclude Include="CollisionManager.h">
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClInclude>
+    <ClInclude Include="InputManager.h">
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClInclude>
+    <ClInclude Include="LevelLoader.h">
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.h">
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClInclude>
+    <ClInclude Include="ResourceManager.h">
+      <Filter>Source Files\Singletons\Services</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -208,9 +211,6 @@
     </ClCompile>
     <ClCompile Include="Color.cpp">
       <Filter>Resource Files\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="ResourceManager.cpp">
-      <Filter>Source Files\Singletons</Filter>
     </ClCompile>
     <ClCompile Include="..\3rdParty\imgui-1.89.3\imgui.cpp">
       <Filter>Source Files\ImGui</Filter>
@@ -278,20 +278,8 @@
     <ClCompile Include="TimeM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="InputManager.cpp">
-      <Filter>Source Files\Singletons</Filter>
-    </ClCompile>
-    <ClCompile Include="CollisionManager.cpp">
-      <Filter>Source Files\Singletons</Filter>
-    </ClCompile>
     <ClCompile Include="BoxCollider.cpp">
       <Filter>Resource Files\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="Renderer.cpp">
-      <Filter>Source Files\Singletons</Filter>
-    </ClCompile>
-    <ClCompile Include="LevelLoader.cpp">
-      <Filter>Source Files\Singletons</Filter>
     </ClCompile>
     <ClCompile Include="Level.cpp">
       <Filter>Source Files</Filter>
@@ -303,7 +291,22 @@
       <Filter>Source Files\Singletons</Filter>
     </ClCompile>
     <ClCompile Include="AudioService.cpp">
-      <Filter>Source Files\Singletons</Filter>
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClCompile>
+    <ClCompile Include="CollisionManager.cpp">
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClCompile>
+    <ClCompile Include="InputManager.cpp">
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClCompile>
+    <ClCompile Include="LevelLoader.cpp">
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer.cpp">
+      <Filter>Source Files\Singletons\Services</Filter>
+    </ClCompile>
+    <ClCompile Include="ResourceManager.cpp">
+      <Filter>Source Files\Singletons\Services</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
