--- a/Pengo/Pengo.vcxproj.filters
+++ b/Pengo/Pengo.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="PengoLevel.cpp">
       <Filter>Source Files\LevelHandling</Filter>
     </ClCompile>
+    <ClCompile Include="SnowBee.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pengo.h">
@@ -64,6 +67,9 @@
     </ClInclude>
     <ClInclude Include="PengoLevel.h">
       <Filter>Source Files\LevelHandling</Filter>
+    </ClInclude>
+    <ClInclude Include="SnowBee.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
