Fixed Bugs in CollisionManager, Added Proper IceBlock Behaviour to Pengo

--- a/Pengo/Pengo.vcxproj
+++ b/Pengo/Pengo.vcxproj
@@ -204,6 +204,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_mixer\lib\$(PlatformTarget)\*.dll" "$(OutputP
     <ClCompile Include="IceBlock.cpp" />
     <ClCompile Include="IceBlockTrigger.cpp" />
     <ClCompile Include="Pengo.cpp" />
+    <ClCompile Include="PengoIceBlockTrigger.cpp" />
     <ClCompile Include="PengoLevel.cpp" />
     <ClCompile Include="PengoLevelLoader.cpp" />
     <ClCompile Include="PengoMain.cpp" />
@@ -217,6 +218,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_mixer\lib\$(PlatformTarget)\*.dll" "$(OutputP
     <ClInclude Include="IceBlockTrigger.h" />
     <ClInclude Include="Pengo.h" />
     <ClInclude Include="PengoEvents.h" />
+    <ClInclude Include="PengoIceBlockTrigger.h" />
     <ClInclude Include="PengoLevel.h" />
     <ClInclude Include="PengoLevelLoader.h" />
     <ClInclude Include="PlayerState.h" />
